...
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textUp1"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFCDD2"
        app:layout_constraintBottom_toTopOf="@+id/textDown1"
        app:layout_constraintTop_toBottomOf="@+id/textUp2"
        tools:layout_editor_absoluteX="1dp">
...
